# vkgroups

./: .gitignore  README.md  config.py  data_loader.py  data_loader_async.py  data_prep.py  general.py  pyproject.toml  tests.py
app/: config.yml  downloader.py  main.py  processor.py
app/libs/: config_loader.py  logger_config.py  singleton.py
app/models/: exceptions.py
app/repos/: factories.py  interfaces.py  mock.py  sqlite.py
app/sources/: factories.py  interfaces.py  mock.py  vk.py
tasks/: __init__.py  config.py  local.py  test.py
tests/: conftest.py  test_data_merge.py
